--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/btnBook"
-        android:layout_width="68dp"
-        android:layout_height="68dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="2dp"
         android:src="@drawable/btn_book"
         app:layout_constraintBottom_toTopOf="@+id/imageView20"
@@ -34,11 +34,11 @@
         app:srcCompat="@drawable/fundo_menu" />
 
     <ImageView
-        android:id="@+id/btn_HumanasBook"
-        android:layout_width="65dp"
-        android:layout_height="69dp"
+        android:id="@+id/btn_Photoshop"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView16"
+        app:layout_constraintEnd_toStartOf="@+id/btnCursos"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@id/guiaEsquerda"
         app:layout_constraintTop_toTopOf="@+id/guideline6"
@@ -46,31 +46,31 @@
 
     <ImageView
         android:id="@+id/imageView19"
-        android:layout_width="65dp"
-        android:layout_height="69dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btnCursos"
         app:layout_constraintEnd_toEndOf="@id/guiaDireita"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/imageView16"
+        app:layout_constraintStart_toEndOf="@+id/btnCursos"
+        app:layout_constraintTop_toTopOf="@+id/btnCursos"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/btn_artigos" />
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="65dp"
-        android:layout_height="69dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView18"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@id/guiaEsquerda"
-        app:layout_constraintTop_toBottomOf="@+id/btn_HumanasBook"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Photoshop"
         app:srcCompat="@drawable/btn_chat_online" />
 
     <ImageView
         android:id="@+id/imageView18"
-        android:layout_width="65dp"
-        android:layout_height="69dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView14"
         app:layout_constraintEnd_toStartOf="@+id/imageView15"
         app:layout_constraintHorizontal_bias="0.5"
@@ -80,8 +80,8 @@
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="65dp"
-        android:layout_height="69dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView18"
         app:layout_constraintEnd_toEndOf="@id/guiaDireita"
         app:layout_constraintHorizontal_bias="0.5"
@@ -244,14 +244,14 @@
         app:layout_constraintTop_toTopOf="@+id/imageView13" />
 
     <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="65dp"
-        android:layout_height="69dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_HumanasBook"
+        android:id="@+id/btnCursos"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_Photoshop"
         app:layout_constraintEnd_toStartOf="@+id/imageView19"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btn_HumanasBook"
-        app:layout_constraintTop_toTopOf="@+id/btn_HumanasBook"
+        app:layout_constraintStart_toEndOf="@+id/btn_Photoshop"
+        app:layout_constraintTop_toTopOf="@+id/btn_Photoshop"
         app:srcCompat="@drawable/btn_cursos" />
 
     <ImageView
