--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,13 +4,13 @@
     <color name="white">#FFFFFFFF</color>
 
     <!--Customisando Connect-->
-    <color name="branco">#FFFFFF</color>
+    <color name="cinza">#9C9C9C</color>
     <color name="preto">#000000</color>
 
     <color name="primaria">#F902B4</color>
     <color name="primariaVariacao">#AA0407</color>
     <color name="secundaria">#f70000</color>
-    <color name="fundo">#FFFFFF</color>
+    <color name="fundo">#F8FFFFFF</color>
     <color name="menu_navegacao">@color/branco</color>
 
     <color name="blue">#F902B4</color>
