--- a/app/src/main/res/layout/activity_player_comunicacao.xml
+++ b/app/src/main/res/layout/activity_player_comunicacao.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,14 +49,14 @@
         app:layout_constraintGuide_percent="0.32" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline6"
+        android:id="@+id/guideline66"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline6"
+        android:id="@+id/guideli6ne6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -110,7 +110,7 @@
         app:srcCompat="@drawable/icon_menu" />
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/imgexecutar"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
@@ -126,11 +126,11 @@
         android:id="@+id/imgPlay"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:onClick="abrirVideo"
+        app:layout_constraintBottom_toBottomOf="@+id/imgexecutar"
+        app:layout_constraintEnd_toEndOf="@+id/imgexecutar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView16"
+        app:layout_constraintTop_toTopOf="@+id/imgexecutar"
         app:srcCompat="@drawable/play_video" />
 
     <TextView
@@ -143,7 +143,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView16" />
+        app:layout_constraintTop_toBottomOf="@+id/imgexecutar" />
 
     <TextView
         android:id="@+id/textView4"
@@ -153,15 +153,16 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintHorizontal_bias="0.091"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Yuri Cardoso"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline6"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -169,7 +170,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/txt_aula02"
+        android:id="@+id/txt_aula01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Aula 01"
@@ -212,8 +213,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_aula02"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:srcCompat="@drawable/icon_ps" />
+        app:layout_constraintTop_toTopOf="@+id/guideli6ne6"
+        app:srcCompat="@drawable/ps" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline9"
@@ -229,8 +230,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_aula03"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_aula01"
-        app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:srcCompat="@drawable/icon_ps" />
+        app:layout_constraintTop_toTopOf="@+id/guideli6ne6"
+        app:srcCompat="@drawable/ps" />
 
     <ImageView
         android:id="@+id/btn_aula03"
@@ -239,8 +240,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_aula04"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_aula02"
-        app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:srcCompat="@drawable/icon_ps" />
+        app:layout_constraintTop_toTopOf="@+id/guideli6ne6"
+        app:srcCompat="@drawable/ps" />
 
     <ImageView
         android:id="@+id/btn_aula04"
@@ -249,14 +250,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_aula03"
-        app:layout_constraintTop_toTopOf="@+id/guideline6"
-        app:srcCompat="@drawable/icon_ps" />
+
+        app:layout_constraintTop_toTopOf="@+id/guideli6ne6"
+        app:srcCompat="@drawable/ps" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="377dp"
         android:layout_height="269dp"
-        android:layout_marginTop="92dp"
         android:text="O que é o Photoshop e sua importância na edição de imagens.\n
 Interface do software e suas principais ferramentas\n.
 Conceitos Básicos:\n
@@ -272,7 +273,7 @@ Projeto Prático:"
         app:layout_constraintBottom_toTopOf="@+id/imageView20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+        app:layout_constraintTop_toTopOf="@+id/guideline66" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
